force-app/main/default/objects/DisputedInvoice__c/DisputedInvoice__c.object-meta.xml
<CustomObject>
    <label>Fatura Contestada</label>
    <nameField>
        <displayFormat>FA-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Faturas Contestadas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>