force-app/main/default/objects/DisputedInvoice__c/fields/AccountHref__c.field-meta.xml
<CustomField>
    <fullName>AccountHref__c</fullName>
    <label>AccountHref</label>
    <length>50</length>
    <type>Text</type>
</CustomField>