force-app/main/default/objects/DisputedInvoice__c/fields/adjustedPaymentAmount__c.field-meta.xml
<CustomField>
    <fullName>adjustedPaymentAmount__c</fullName>
    <label>Valor de Pagamento Ajustado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>