force-app/main/default/objects/DisputedInvoice__c/fields/Balance__c.field-meta.xml
<CustomField>
    <fullName>Balance__c</fullName>
    <label>Balanço</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>