force-app/main/default/objects/DisputedInvoice__c/fields/barCode__c.field-meta.xml
<CustomField>
    <fullName>barCode__c</fullName>
    <label>Código de Barras</label>
    <length>255</length>
    <type>Text</type>
</CustomField>