force-app/main/default/objects/DisputedInvoice__c/fields/BillingAccountId__c.field-meta.xml
<CustomField>
    <fullName>BillingAccountId__c</fullName>
    <label>Billing Account Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>