force-app/main/default/objects/DisputedInvoice__c/fields/billNo__c.field-meta.xml
<CustomField>
    <fullName>billNo__c</fullName>
    <label>Número da Bill</label>
    <length>255</length>
    <type>Text</type>
</CustomField>