force-app/main/default/objects/DisputedInvoice__c/fields/billOrigin__c.field-meta.xml
<CustomField>
    <fullName>billOrigin__c</fullName>
    <label>Origem da Fatura</label>
    <length>255</length>
    <type>Text</type>
</CustomField>