force-app/main/default/objects/DisputedInvoice__c/fields/case__c.field-meta.xml
<CustomField>
    <fullName>case__c</fullName>
    <label>Caso</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Faturas Contestadas</relationshipLabel>
    <relationshipName>FaturasContestadas</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>