force-app/main/default/objects/DisputedInvoice__c/fields/cycleCode__c.field-meta.xml
<CustomField>
    <fullName>cycleCode__c</fullName>
    <label>Código do Ciclo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>