force-app/main/default/objects/DisputedInvoice__c/fields/FinancialAccountId__c.field-meta.xml
<CustomField>
    <fullName>FinancialAccountId__c</fullName>
    <label>Financial Account Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>