force-app/main/default/objects/DisputedInvoice__c/fields/imageNo__c.field-meta.xml
<CustomField>
    <fullName>imageNo__c</fullName>
    <label>Número da Imagem</label>
    <length>255</length>
    <type>Text</type>
</CustomField>