force-app/main/default/objects/DisputedInvoice__c/fields/imageType__c.field-meta.xml
<CustomField>
    <fullName>imageType__c</fullName>
    <label>Tipo de Imagem</label>
    <length>255</length>
    <type>Text</type>
</CustomField>