force-app/main/default/objects/DisputedInvoice__c/fields/invoiceNumber__c.field-meta.xml
<CustomField>
    <fullName>invoiceNumber__c</fullName>
    <label>Número da Fatura</label>
    <length>255</length>
    <type>Text</type>
</CustomField>