force-app/main/default/objects/DisputedInvoice__c/fields/l9CycleCloseDate__c.field-meta.xml
<CustomField>
    <fullName>l9CycleCloseDate__c</fullName>
    <label>Data de Encerramento do Ciclo</label>
    <type>DateTime</type>
</CustomField>