force-app/main/default/objects/DisputedInvoice__c/fields/l9CycleStartDate__c.field-meta.xml
<CustomField>
    <fullName>l9CycleStartDate__c</fullName>
    <label>Data de Início do Ciclo</label>
    <type>DateTime</type>
</CustomField>