force-app/main/default/objects/DisputedInvoice__c/fields/l9InvoiceCloseDate__c.field-meta.xml
<CustomField>
    <fullName>l9InvoiceCloseDate__c</fullName>
    <label>Data de Encerramento da Fatura</label>
    <type>DateTime</type>
</CustomField>