force-app/main/default/objects/DisputedInvoice__c/fields/originalPaymentDueDate__c.field-meta.xml
<CustomField>
    <fullName>originalPaymentDueDate__c</fullName>
    <label>Data de Vencimento Original</label>
    <type>DateTime</type>
</CustomField>