force-app/main/default/objects/DisputedInvoice__c/fields/paymentAmount__c.field-meta.xml
<CustomField>
    <fullName>paymentAmount__c</fullName>
    <label>Valor do Pagamento</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>