force-app/main/default/objects/DisputedInvoice__c/fields/paymentDate__c.field-meta.xml
<CustomField>
    <fullName>paymentDate__c</fullName>
    <label>Data de Pagamento</label>
    <type>DateTime</type>
</CustomField>