force-app/main/default/objects/DisputedInvoice__c/fields/paymentDueDate__c.field-meta.xml
<CustomField>
    <fullName>paymentDueDate__c</fullName>
    <label>Data de Vencimento</label>
    <type>DateTime</type>
</CustomField>