force-app/main/default/objects/DisputedInvoice__c/fields/Prefill__c.field-meta.xml
<CustomField>
    <fullName>Prefill__c</fullName>
    <description>Campo utilizado para guardar informações da fatura e dos itens selecionados para iniciar os fluxos da móvel</description>
    <label>Prefill</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>