force-app/main/default/objects/DisputedInvoice__c/fields/PrefillInvoiceCredits__c.field-meta.xml
<CustomField>
    <fullName>PrefillInvoiceCredits__c</fullName>
    <description>Campo utilizado para guardar informações da fatura e dos itens selecionados para iniciar os fluxos da móvel</description>
    <label>Prefill Invoice Credits</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>