force-app/main/default/objects/DisputedInvoice__c/fields/referenceMonth__c.field-meta.xml
<CustomField>
    <fullName>referenceMonth__c</fullName>
    <label>Mês de Referência</label>
    <length>255</length>
    <type>Text</type>
</CustomField>